# hazel

./: .gitattributes  .gitignore  .travis-ci.sh  .travis-deploy.sh  .travis.yml  ACCESSIBILITY.md  CONTRIBUTORS.md  INSTALL.md  INSTRUCTORS.md  KindSystem.md  LICENSE  Makefile  PULLING.md  README.md  TODO-jump-branch  UPDATING.md  _opam  all-noslns.haze  all.haze  collate_data.sh  collated_data.bigrun1.xlsx  collated_data.csv  collated_data.err-rounds-passwords-temperature-0.5.xlsx  collated_data.err-rounds-playlist-temp1.xlsx  collated_data.temperature-trials.xlsx  collated_data.whole-prelude.xlsx  collated_data.whole_prelude.xlsx  deploy-key.enc  dune  dune-project  dune-workspace  esy.json  hazel-build-key.enc  hazel-syntax-gpt4-prompt-exs.haze  hazel.opam  hazel.opam.locked  hazelwork.code-workspace  label_annot_testing.txt  llm-paper-tables.xlsx  mammoth-run-booking-correct.txt  (+17 more)
src/: .hz.ml.swo  .hz.ml.swp  .hz_semantics.ml.swn  .hz_semantics.ml.swo  .hz_semantics.ml.swp  .hz_view.ml.swp  .merlin  .ocamlformat  Action.re  ActionPanel.re  Associator.re  Chrome.re  ContextInspector.re  CursorInspector.re  Deserialize.re  Deserialize.rei  Dynamics.re  EditorBox.re  EditorBoxTypes.re  Examples.re  GeneralUtil.re  HTMLUtil.re  HZLex.mll  HZParse.mly  Hazel.re  HazelLex.mll  HazelParse.mly  Helper.re  HistoryPanel.re  HoleRef.re  JSUtil.re  LangUtil.re  Livelits.re  Logger.ml  Logger.re  Main.re  Makefile  Model.re  MyModel.re  MyView.re  (+48 more)
src/cardstacks/: Card.re  CardStack.re  MWPLS19Cards.re  RCStudyCards.re  TestCards.re  TutorialCards.re
src/compiler/: .gitignore  dune  esy.json
src/core/: Format.re  Measured.re  Settings.re  TermIds.re  TermRanges.re  VarMap.re  dune
src/core3/: dune
src/grainc/: grainc.re
src/gui/: ActionPanel.re  Cell.re  Code.re  ContextInspector.re  CursorIndicators.re  CursorInspector.re  Doc.re  DocOfTerm.re  Layout.re  MyActionPanel.re  MyContextInspector.re  MyCursorInspector.re  OptionsPanel.re  Page.re  Panel.re  Sidebar.re  SvgShapes.re  ViewUtil.re
src/h4zelcore/: Ancestor.re  Ancestors.re  Chain.re  Comp.re  Dir.re  Gram.re  Grout.re  Lang.re  Mold.re  PGram.re  Piece.re  Segment.re  Siblings.re  Sort.re  Tile.re
src/haz3l_roc_transpiler/: MakeRoc.re  TermRoc.re  Translation.re  dune
src/haz3lcore/: CH.re  CodeString.re  Hyper.re  Indentation.re  JsUtil.re  Key.re  LabeledTuple.re  LabeledTupleUtil.re  Measured.re  Point.re  ProjectorsUpdate.re  StructureShareSexp.re  StructureShareSexp.rei  TermMap.re  TermRanges.re  TileMap.re  Unicode.re  VarMap.re  dune
src/haz3lformatter/: Formatter.re  FormatterMain.re
src/haz3lls/: Capabilities.re  ErrorCodes.re  Hazel_ls.re  Message_Constructs.re  Messages.re  Params.re  Util.re  dune  test.json
src/haz3lmenhir/: AST.re  Conversion.re  Lexer.mll  Parser.automaton  Parser.conflicts  Parser.mly  README.md  dune
src/haz3lschool/: .gitignore  DerivationTree.re  DocumentationEnv.re  Ex.ml  Exercise.re  ExerciseBase.re  ExerciseProgramming.re  ExerciseProof.re  GradePrelude.re  Gradescope.re  Grading.re  GradingProgramming.re  GradingProof.re  GradingReport.re  ProgrammingCore.re  ProgrammingGrade.re  ProofCore.re  ProofGrade.re  SchoolData.re  SchoolExercise.re  Serde.re  SerdePrelude.re  Specs.re  SyntaxTest.re  dune  proof-grade-scheme.md
src/haz3ltest/: Test_Elaboration.re  Test_Elaborator.re  Test_TypeAssignment.re  TeztExample.re  dune  haz3ltest.re
src/haz3ltest2/: haz3ltest.re
src/haz3lweb/: ActionHistory.re  Assistant.re  Auto.re  Benchmark.re  ColorSteps.re  Common.re  DHExpToSeg.re  DebugAction.re  DebugConsole.re  DocumentationEnv.re  Editors.re  Example.re  Examples.re  Exercise.re  ExerciseSettings_base.re  ExerciseUtil.re  ExplainThisMessages.re  Export.re  FailedInput.re  FontMetrics.re  Grading.re  Init.ml  Init_copy.ml  Keyboard.re  LSP.re  LangDocMessages.re  LanguageRefSlide.ml  LocalStorage.re  Log.re  LogEntry.re  Main.re  Model.re  ModelResult.re  ModelResults.re  ModelSettings.re  NinjaKeys.re  Os.re  PerfTest.re  PersistentData.re  PersistentZipper.re  (+33 more)
src/hazelc/: Codegen.re  Codegen.rei  Compile.re  Compile.rei  Compiler.re  Compiler.rei  Emit.re  Emit.rei  Grain.re  Grain.rei  Hir.re  Hir.rei  IHExp.re  IHExp.rei  Main.re  Mir.re  Mir.rei  README.md  Source.re  Source.rei  Transform.re  Transformer.re  Transformer.rei  Translate.re  Translate.rei  Translator.re  Translator.rei  dune
src/hazelcore/: AbbrevErrStatus.re  Action.re  ActionExp.re  ActionOutcome.re  ActionOutcome.rei  ActionPat.re  ActionTyp.re  Action_Exp.re  Action_Exp.rei  Action_Pat.re  Action_Pat.rei  Action_TPat.re  Action_Tag.re  Action_Typ.re  Action_Typ.rei  Action_common.re  Action_common.rei  AnnotatedSkel.re  AnnotatedSkel.rei  AssertMap.re  AssertNum.re  AssertNumGen.re  AssertNumber.re  AssertResult.re  AssertStatus.re  Assistant.re  AssistantCommon.re  Associativity.re  Associator.re  Builtin.re  Builtin.rei  BuiltinFunctions.re  Builtins.re  Builtins.rei  CaseErrStatus.re  CaseErrStatus.rei  CharIndex.rei  CodeHistory.re  CodeHistory.rei  Constraint.re  (+246 more)
src/hazellang/: Lang.re  dune
src/hazellib/: Associator.re  Examples.re  SkelPatLexer.mll  SkelTypLexer.mll  dune
src/hazelparse/: dune  hazel_lexer.mll  hazel_parser.mly  parse.ml
src/hazeltest/: Hazeltest.re  Test_Hazeltext.re  Test_SkelParser.re  TeztExamples.re  dune  hazeltest.re
src/hazeltext/: dune  lex.mll  parse.mly  parsing.ml  parsing.mli  print.ml  print.mli  print.re
src/hazelweb/: .merlin 2  Eval.re  Evaluator.re  Hazel.re  Helper.re  HistoryPanel.re  IsMac.re  JSUtil.re  Livelits.re  Logger.re  Main.re  Main2.re  Model.re  ModelAction.re  MoveInput.re  Palettes.re  Permalink.re  Permalink.rei  State.re  Try.re  UndoHistory.re  Update.re  UpdateProgram.re  UpdateProgram.rei  Version_autogenerator.sh  Worker.re  dune
src/hzcore/: Action.re  Action.rei  ActionEffect.re  BinText.rei  ChildStep.re  Ctx.re  DTerm_exp.rei  EditState.re  EditState.rei  Elab_exp.re  FloatLit.rei  FrameInfo_exp.re  Frame_base.rei  Frame_exp.rei  Frame_pat.rei  Grout.rei  IdGen.re  IdGenCmd.re  IntLit.re  IntLit.rei  OpText.rei  (+32 more)
(+15880 files in other folders)
