; normal build: dune build
; debug build: dune build --profile debug

(include_subdirs unqualified) ; does not include dirs that specify `(include_subdirs no)`


(alias
  (name default)
  (deps (glob_files www/*)))

(executable
  (name hazel)
  (js_of_ocaml (flags (:include js-of-ocaml-flags-%{profile})))
  (libraries sexplib incr_dom)
  (preprocess (pps ppx_deriving.show js_of_ocaml.ppx ppx_sexp_conv ppx_let)))

(rule
  (write-file js-of-ocaml-flags-dev "(:standard --debuginfo --noinline)"))

(rule
  (write-file js-of-ocaml-flags-release "(:standard)"))

(ocamllex
  (modules SkelExprLexer SkelPatLexer SkelTypLexer))

(menhir
  (infer false)
  (modules SkelExprParser SkelPatParser SkelTypParser))
