(include_subdirs unqualified)

(library
 (name haz3lcore)
 (libraries util sexplib unionFind uuidm virtual_dom yojson core)
 (js_of_ocaml)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps
   ppx_yojson_conv
   js_of_ocaml-ppx
   ppx_let
   ppx_sexp_conv
   ppx_deriving.show
   ppx_deriving_qcheck)))

(env
 (dev
  (js_of_ocaml
   (flags :standard --debuginfo --noinline --dynlink --linkall --sourcemap)))
 (release
  (js_of_ocaml
   (flags :standard))))
