(include_subdirs unqualified)

(library
 (name haz3lcore)
 (libraries util sexplib unionFind uuidm virtual_dom yojson core)
 (js_of_ocaml)
 (preprocess
  (pps
   ppx_yojson_conv
   js_of_ocaml-ppx
   ppx_let
   ppx_sexp_conv
   ppx_deriving.show
   base_quickcheck.ppx_quickcheck)))

(env
 (dev
  (js_of_ocaml
   (flags :standard --debuginfo --noinline --dynlink --linkall --sourcemap)))
 (release
  (js_of_ocaml
   (flags :standard))))
