(include_subdirs unqualified)

(library
 (name haz3lschool)
 (modules (:standard) \ Gradescope)
 (libraries util ppx_yojson_conv.expander haz3lcore pretty)
 (preprocess
  (pps ppx_yojson_conv ppx_let ppx_sexp_conv ppx_deriving.show)))

(executable
 (name gradescope)
 (modules Gradescope)
 (libraries ppx_yojson_conv.expander haz3lcore haz3lschool)
 (preprocess
  (pps ppx_yojson_conv ppx_let ppx_sexp_conv ppx_deriving.show)))

(env
 (dev
  (flags
   (:standard -warn-error -A))
  (js_of_ocaml
   (flags :standard --debuginfo --noinline --dynlink --linkall --sourcemap)))
 (release
  (flags
   (:standard -warn-error +A))
  (js_of_ocaml
   (flags :standard))))
