(include_subdirs unqualified)

(library
 (name hazelc)
 (modules :standard)
 (libraries hazelcore)
 (wrapped false)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (inline_tests)
 (preprocess
  (pps ppx_let ppx_sexp_conv ppx_inline_test)))

(rule
 (write-file js-of-ocaml-flags-dev "(:standard --debuginfo --noinline)"))

(rule
 (write-file js-of-ocaml-flags-release "(:standard)"))
