(include_subdirs unqualified)

(library
 (name hazelc)
 (modules :standard \ Main)
 (libraries hazelcore hazeltext)
 (wrapped false)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (inline_tests)
 (preprocess
  (pps ppx_let ppx_sexp_conv ppx_inline_test ppx_assert)))

(executable
 (name main)
 (modules Main)
 (libraries hazelc cmdliner)
 (preprocess
  (pps ppx_let ppx_sexp_conv)))

(rule
 (write-file js-of-ocaml-flags-dev "(:standard)"))

(rule
 (write-file js-of-ocaml-flags-release "(:standard)"))
