; normal build: dune build
; debug build: dune build --profile debug

(include_subdirs unqualified) ; does not include dirs that specify `(include_subdirs no)`

(library
  (name hazelcore)
  (libraries re sexplib core_kernel.weak_hashtbl)
  (wrapped false)
  (preprocess (pps ppx_sexp_conv)))

(ocamllex
  (modules SkelExprLexer SkelPatLexer SkelTypLexer))

(menhir
  (modules SkelExprParser SkelPatParser SkelTypParser))
