(include_subdirs unqualified)

(library
 (name hazelcore)
 (libraries re sexplib camomile pretty)
 (wrapped false)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (inline_tests)
 (preprocess
  (pps ppx_let ppx_sexp_conv ppx_expect ppx_inline_test)))

(ocamllex UnescapedStringParser)

(rule
 (write-file js-of-ocaml-flags-dev "(:standard)"))

(rule
 (write-file js-of-ocaml-flags-release "(:standard)"))
