; normal build: dune build
; debug build: dune build --profile debug

(include_subdirs unqualified) ; does not include dirs that specify `(include_subdirs no)`


;(alias
;  (name default)
;  (deps (glob_files www/*)))

(library
  (name hazellib)
;  (modules (:standard
;    \ ("Main" HistoryPanel DocOfTerm Panel SvgShapes Palettes Card CardStack
;    TutorialCards RCStudyCards Model Update Sidebar OptionsPanel Code ActionPanel
;    CursorInspector CursorIndicators ContextInspector Cell Page Hazel
;    Logger JSUtil Helper)))
  (libraries sexplib re)
  (preprocess (pps ppx_deriving.show ppx_sexp_conv ppx_let)))

;(rule
;  (write-file js-of-ocaml-flags-dev "(:standard --debuginfo --noinline)"))

;(rule
;  (write-file js-of-ocaml-flags-release "(:standard)"))

(ocamllex
  (modules SkelExprLexer SkelPatLexer SkelTypLexer))

(menhir
  (infer false)
  (modules SkelExprParser SkelPatParser SkelTypParser))
