; normal build: dune build
; debug build: dune build --profile debug

(include_subdirs unqualified) ; does not include dirs that specify `(include_subdirs no)`

(alias
  (name default)
  (deps (glob_files www/*)))

; This library ensures that all modules are type checked even if they are not used.
(library
  (name mainlib)
  (modules (:standard \ Main))
  (libraries hazellib incr_dom)
  (wrapped false)
  (preprocess (pps ppx_deriving.show js_of_ocaml.ppx ppx_sexp_conv ppx_let))
  (js_of_ocaml (flags (:include js-of-ocaml-flags-%{profile}))))

(executable
  (name main)
  (modules Main)
  (libraries mainlib)
  (js_of_ocaml (flags (:include js-of-ocaml-flags-%{profile}))))

(rule
  (write-file js-of-ocaml-flags-dev "(:standard --debuginfo --noinline)"))

(rule
  (write-file js-of-ocaml-flags-release "(:standard)"))
