(include_subdirs unqualified)

(library
 (name menhirtest)
 (libraries re sexplib camomile pretty menhirLib)
 (wrapped false)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (preprocess
  (pps ppx_let ppx_sexp_conv)))

(ocamllex
 (modules TestLex))

(menhir
 (flags --table)
 (modules TestParse))

(rule
 (write-file js-of-ocaml-flags-dev "(:standard --debuginfo --noinline)"))

(rule
 (write-file js-of-ocaml-flags-release "(:standard)"))
