(include_subdirs unqualified)

(library
 (name pretty)
 (libraries sexplib incr_dom)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (preprocess
  (pps ppx_let ppx_sexp_conv)))

(env
  (dev
    (flags (:standard -warn-error -A))))
; Make two libraries one from js-of-ocaml and one not

(rule
 (write-file js-of-ocaml-flags-dev "(:standard --debuginfo --noinline)"))

(rule
 (write-file js-of-ocaml-flags-release "(:standard)"))
