(include_subdirs unqualified)

(library
 (name pretty)
 (libraries util sexplib)
 (preprocess
  (pps ppx_let ppx_sexp_conv)))

(env
 (dev
  (flags
   (:standard -warn-error -A))
  (js_of_ocaml
   (flags :standard --debuginfo --noinline --dynlink --linkall --sourcemap)))
 (release
  (flags
   (:standard -warn-error +A-58))
  (js_of_ocaml
   (flags :standard))))
