(include_subdirs no)

(rule
  (targets Semantics.ml)
  (deps (file Semantics.v))
    (action (with-stdout-to Semantics.ml (run coqtop -noglob -compile Semantics.v))))

(library
  (name Semantics)
  ; I don't know how to make it use the default warnings but with modifications,
  ; so I just copied the default warnings and appended "-27-39" to the end
  (flags (:standard -w @a-4-29-40-41-42-44-45-48-58-59-60-40-27-39)))
