(include_subdirs unqualified)

(alias
 (name default)
 (deps
  (glob_files www/*)))

(executable
 (name Worker)
 (libraries synthesizer)
 (modes js)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (preprocess
  (pps js_of_ocaml-ppx ppx_let ppx_sexp_conv)))

(rule
 (write-file js-of-ocaml-flags-dev "(:standard --debuginfo --noinline)"))

(rule
 (write-file js-of-ocaml-flags-release "(:standard)"))
