(library
 (name synthesis)
 (modules SynthesizerInterface)
 (libraries synthesiscomm)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (preprocess
  (pps js_of_ocaml-ppx ppx_let ppx_sexp_conv))
 (flags
  (:standard -warn-error -A)))

(executable
 (name Worker)
 (modules Worker)
 (libraries synthesiscomm synthesiscore)
 (modes js)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (preprocess
  (pps js_of_ocaml-ppx ppx_let ppx_sexp_conv))
 (flags
  (:standard -warn-error -A)))

(rule
 (write-file js-of-ocaml-flags-dev "(:standard --debuginfo --noinline)"))

(rule
 (write-file js-of-ocaml-flags-release "(:standard)"))
