(library
 (name util)
 (libraries re base ptmap incr_dom virtual_dom yojson)
 (js_of_ocaml
  (flags :standard --debuginfo --noinline --dynlink --linkall --sourcemap))
 (preprocess
  (pps
   ppx_yojson_conv
   js_of_ocaml-ppx
   ppx_let
   ppx_sexp_conv
   ppx_deriving.show)))

(rule
 (write-file
  js-of-ocaml-flags-dev
  "(:standard --debuginfo --noinline --dynlink --linkall --sourcemap)"))

(rule
 (write-file js-of-ocaml-flags-release "(:standard)"))
