(library
 (name util)
 (libraries re base ptmap incr_dom virtual_dom yojson)
 (js_of_ocaml)
 (preprocess
  (pps
   ppx_yojson_conv
   js_of_ocaml-ppx
   ppx_let
   ppx_sexp_conv
   ppx_deriving.show)))

(env
 (dev
  (flags :standard -warn-error -A)
  (js_of_ocaml
   (flags :standard --debuginfo --noinline --dynlink --linkall --sourcemap)))
 (release
  (flags :standard -warn-error +A-58)
  (js_of_ocaml
   (flags :standard))))
