(include_subdirs unqualified)

(library
 (name web)
 (modules :standard \ Main)
 (libraries incr_dom util core ppx_deriving_yojson.runtime)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (preprocess
  (pps ppx_deriving_yojson js_of_ocaml-ppx ppx_let ppx_sexp_conv
    ppx_deriving.show)))

(executable
 (name main)
 (modules Main)
 (libraries web ppx_deriving_yojson.runtime)
 (modes js)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (preprocess
  (pps ppx_deriving_yojson js_of_ocaml-ppx ppx_let ppx_sexp_conv
    ppx_deriving.show)))

(rule
 (write-file js-of-ocaml-flags-dev "(:standard)"))

(rule
 (write-file js-of-ocaml-flags-release "(:standard)"))
