(include_subdirs unqualified)

(alias
 (name default)
 (deps
  (source_tree www)))

(library
 (name web)
 (modules :standard \ Main)
 (libraries incr_dom util ppx_yojson_conv.expander haz3lcore hazelweb)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (preprocess
  (pps ppx_yojson_conv js_of_ocaml-ppx ppx_let ppx_sexp_conv
    ppx_deriving.show)))

(executable
 (name main)
 (modules Main)
 (libraries web ppx_yojson_conv.expander hazelweb)
 (modes js)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (preprocess
  (pps ppx_yojson_conv js_of_ocaml-ppx ppx_let ppx_sexp_conv
    ppx_deriving.show)))

(rule
 (write-file js-of-ocaml-flags-dev "(:standard)"))

(rule
 (write-file js-of-ocaml-flags-release "(:standard)"))
