(include_subdirs unqualified)

(library
 (name hazelclib)
 (libraries dune-site))

(install
 (section
  (site
   (hazelc lib)))
 (files
  (hazel/rt/ast.gr as hazel/rt/ast.gr)
  (hazel/rt/ast_mk.gr as hazel/rt/ast_mk.gr)
  (hazel/rt/ast_print.gr as hazel/rt/ast_print.gr)
  (hazel/rt/ast_sexp.gr as hazel/rt/ast_sexp.gr)
  (hazel/rt/ast_util.gr as hazel/rt/ast_util.gr)
  (hazel/rt/sum.gr as hazel/rt/sum.gr)
  (hazel/std/builtins.gr as hazel/std/builtins.gr)
  (sexplib/sexp.gr as sexplib/sexp.gr)
  (sexplib/sexpconv.gr as sexplib/sexpconv.gr)))

(generate_sites_module
 (module hazelclib)
 (sites hazelc))
