(include_subdirs unqualified)

(library
 (name hazelcrt)
 (libraries dune-site))

(install
 (section
  (site
   (hazelc lib)))
 (files
  (lib/hazel/rt/ast.gr as hazel/rt/ast.gr)
  (lib/hazel/rt/ast_mk.gr as hazel/rt/ast_mk.gr)
  (lib/hazel/rt/ast_ops.gr as hazel/rt/ast_ops.gr)
  (lib/hazel/rt/ast_print.gr as hazel/rt/ast_print.gr)
  (lib/hazel/rt/ast_sexp.gr as hazel/rt/ast_sexp.gr)
  (lib/hazel/rt/ast_util.gr as hazel/rt/ast_util.gr)
  (lib/hazel/rt/maybe_indet.gr as hazel/rt/maybe_indet.gr)
  (lib/hazel/rt/sum.gr as hazel/rt/sum.gr)
  (lib/hazel/std/builtins.gr as hazel/std/builtins.gr)
  (lib/sexplib/sexp.gr as sexplib/sexp.gr)
  (lib/sexplib/sexpconv.gr as sexplib/sexpconv.gr)))

(generate_sites_module
 (module hazelcrt)
 (sites hazelc))
