(include_subdirs qualified)

(library
 (name structure)
 ; (libraries util sexplib)
 (libraries material)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (preprocess
  (pps
   ppx_let
   ppx_sexp_conv
   ppx_deriving.show
   ppx_deriving.ord
   ppx_deriving_hash
   ppx_yojson_conv)))

(rule
 (write-file js-of-ocaml-flags-dev "(:standard --debuginfo --noinline)"))

(rule
 (write-file js-of-ocaml-flags-release "(:standard)"))
